<resources>
    <!-- General -->
    <string name="app_name">TakeANote</string>
    <string name="app_github">https://github.com/TakeANote</string>
    <string name="empty" />
    <!-- ENDOF - General -->

    <!-- Login View -->
    <string name="connection">sign in</string>
    <string name="Connection">Sign in</string>
    <string name="email_input">Email address</string>
    <string name="password_input">Password</string>
    <!-- ENDOF - Login View -->

    <!-- Main Activity -->
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- ENDOF - Main Activity -->

    <!-- Navigation Drawer -->
    <string name="nav_drawer_notes_title">My Notes</string>
    <string name="nav_drawer_shared_note_title">My Shared Notes</string>
    <string name="nav_drawer_record_note_title">My Recorded Notes</string>
    <string name="nav_drawer_settings_title">Settings</string>
    <string name="nav_drawer_social_title">Social</string>
    <string name="nav_drawer_friends_title">Friends</string>
    <string name="nav_drawer_logout_title">Logout</string>
    <!-- ENDOF - Navigation Drawer -->

    <!-- Doc format items -->
    <string name="format_justify">justify</string>
    <string name="format_bold">bold</string>
    <string name="format_italic">italic</string>
    <string name="format_underlined">underlined</string>
    <string name="format_align_left">align left</string>
    <string name="format_align_center">align center</string>
    <string name="format_align_right">align right</string>
    <string name="format_color_text">color</string>
    <!-- ENDOF - Doc format items -->

    <!-- Note list -->
    <string name="note_item_default_title">Document title</string>
    <string name="note_item_default_creation_date">Created on 10.10.2010</string>
    <!-- ENDOF - Note list -->

    <!-- Dialogs -->
    <string name="dialog_create_document_title">Create note</string>
    <string name="dialog_create_document_content">Note name</string>
    <string name="dialog_rename_document_title">Rename note</string>
    <string name="dialog_create_friend_title">Add a friend</string>
    <string name="dialog_create_friend_content">Friend name</string>
    <!-- ENDOF - Dialogs -->

    <!-- Note options -->
    <string name="delete_note">Delete this note</string>
    <string name="rename_note">Rename this note</string>
    <string-array name="note_options">
        <item>@string/delete_note</item>
        <item>@string/rename_note</item>
    </string-array>
    <!-- ENDOF - Note options -->

    <!-- Friend options -->
    <string name="delete_friend">Delete this friend</string>
    <string name="poke_friend">Poke this friend</string>
    <string-array name="friend_options">
        <item>@string/delete_friend</item>
        <item>@string/poke_friend</item>
    </string-array>
    <!-- ENDOF - Friend options -->

</resources>
