<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_notes" android:icon="@mipmap/ic_folder_black_48dp"
            android:title="@string/nav_drawer_notes_title" />
        <item android:id="@+id/nav_shared_notes" android:icon="@mipmap/ic_folder_shared_black_48dp"
            android:title="@string/nav_drawer_shared_note_title" />
        <item android:id="@+id/nav_record_notes" android:icon="@mipmap/ic_record_voice_over_black_48dp"
            android:title="@string/nav_drawer_record_note_title" />
        <item android:id="@+id/nav_settings" android:icon="@mipmap/ic_settings_black_48dp"
            android:title="@string/nav_drawer_settings_title" />
    </group>

    <item android:title="@string/nav_drawer_social_title">
        <menu>
            <item android:id="@+id/nav_friends" android:icon="@mipmap/ic_group_black_48dp"
                android:title="@string/nav_drawer_friends_title" />
            <item android:id="@+id/nav_logout" android:icon="@mipmap/ic_power_settings_new_black_48dp"
                android:title="@string/nav_drawer_logout_title" />
        </menu>
    </item>

</menu>