<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="takeanote.takeanote.activity.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:text="@string/app_name"
        android:id="@+id/document_picture"
        android:layout_marginTop="35dp"
        android:theme="@style/AppTheme.Title" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.Input"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/document_picture"
        android:touchscreenBlocksFocus="false">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:clickable="true"
            android:inputType="textEmailAddress|textNoSuggestions"
            android:layout_above="@+id/password"
            android:hint="@string/email_input"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.Input"
        android:layout_below="@+id/email_til"
        android:layout_marginTop="12dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/password"
            android:singleLine="true"
            android:hint="@string/password_input"
            android:ems="10" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connection"
        android:textAllCaps="true"
        android:id="@+id/btn_connection"
        android:layout_marginTop="30dp"
        android:theme="@style/AppTheme.ColoredButton"
        android:layout_below="@+id/password_til"
        android:layout_alignLeft="@+id/password_til"
        android:layout_alignStart="@+id/password_til"
        android:layout_alignRight="@+id/password_til"
        android:layout_alignEnd="@+id/password_til" />

</RelativeLayout>
